--- a/public/index.html
+++ b/public/index.html
@@ -1,75 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>ccported proxy go brrrrr</title>
-<style>
-  :root { --bg:#0b0b0c; --fg:#e9e9ea; --muted:#8a8a8f; --bar:#16171a; --accent:#3b82f6; }
-  * { box-sizing: border-box; }
-  body { margin:0; height:100vh; display:flex; flex-direction:column; background:var(--bg); color:var(--fg); font:14px/1.4 ui-sans-serif,system-ui,Segoe UI,Roboto,Helvetica,Arial; }
-  header { background:var(--bar); padding:8px; display:flex; gap:8px; align-items:center; border-bottom:1px solid #222; }
-  input { flex:1; padding:10px 12px; background:#0f1012; color:var(--fg); border:1px solid #24252a; border-radius:10px; outline:none; }
-  input::placeholder{ color:var(--muted); }
-  button { padding:10px 14px; background:var(--accent); color:white; border:none; border-radius:10px; cursor:pointer; }
-  main { flex:1; }
-  iframe { width:100%; height:100%; border:0; background:white; }
-  small { color:var(--muted); }
-</style>
+  <meta charset="UTF-8">
+  <title>ccported go brrr</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+    }
+    #bar {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      background: #1e1e1e;
+    }
+    #url {
+      flex: 1;
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px 0 0 6px;
+      background: #222;
+      color: #fff;
+      outline: none;
+    }
+    #go {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: none;
+      border-radius: 0 6px 6px 0;
+      background: #2563eb;
+      color: #fff;
+      cursor: pointer;
+    }
+    #go:hover {
+      background: #1d4ed8;
+    }
+    iframe {
+      width: 100%;
+      height: calc(100vh - 50px);
+      border: none;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <input id="url" placeholder="https://example.com" spellcheck="false"/>
-    <button id="go">Go</button>
-  </header>
-  <main>
-    <iframe id="view" referrerpolicy="no-referrer"></iframe>
-  </main>
+  <div id="bar">
+    <input id="url" type="text" placeholder="Enter a URL (https://example.com)">
+    <button id="go" onclick="go()">Go</button>
+  </div>
+  <iframe id="frame"></iframe>
+
   <script>
-    const workerOrigin = location.origin; // same host as this page
-    const param = "u";
-    const urlEl = document.getElementById("url");
-    const frame = document.getElementById("view");
-
-    function nav(raw) {
-      const u = raw.startsWith("http") ? raw : `https://${raw}`;
-      const proxied = `${workerOrigin}/?${param}=` + encodeURIComponent(u);
-      frame.src = proxied;
-      try { history.replaceState(null, "", `#${encodeURIComponent(u)}`); } catch {}
-    }
-
-    document.getElementById("go").addEventListener("click", () => {
-      if (!urlEl.value.trim()) return;
-      nav(urlEl.value.trim());
-    });
-    urlEl.addEventListener("keydown", e => {
-      if (e.key === "Enter") {
-        e.preventDefault();
-        if (!urlEl.value.trim()) return;
-        nav(urlEl.value.trim());
-      }
-    });
-
-    // Keep address bar in sync as you click around (same-origin since Worker serves content)
-    frame.addEventListener("load", () => {
-      try {
-        const current = new URL(frame.contentWindow.location.href);
-        const target = current.searchParams.get(param);
-        if (target) urlEl.value = target;
-      } catch {
-        // If some page changes origin somehow, ignore
-      }
-    });
-
-    // Support #<url> deep-link
-    if (location.hash.length > 1) {
-      const initial = decodeURIComponent(location.hash.slice(1));
-      urlEl.value = initial;
-      nav(initial);
-    } else {
-      const demo = "https://example.com";
-      urlEl.value = demo;
-      nav(demo);
+    function go() {
+      const url = document.getElementById("url").value.trim();
+      if (!url) return;
+      const prefixed = url.startsWith("http") ? url : "https://" + url;
+      document.getElementById("frame").src = "/?url=" + encodeURIComponent(prefixed);
     }
   </script>
 </body>
